[package]
name = "rustlearning"
version = "0.1.0"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rand = "0.9.0"

[[bin]]
name = "guessing-game"

[[bin]]
name = "fahrenheit-to-celsius"

[[bin]]
name = "fibonacci-n"

[[bin]]
name = "collection-ex1"

[[bin]]
name = "collection-ex2"
